--- a/src/main/java/con/qa/orangehrm/config/config.properties
+++ b/src/main/java/con/qa/orangehrm/config/config.properties
@@ -1,4 +1,4 @@
 Url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 BrowserName = chrome
 UserName = Admin
-Password = admin123
+PassWord = admin123
